--- a/translations/resources/en.json
+++ b/translations/resources/en.json
@@ -19,5 +19,9 @@
   "Sign out": "Sign out",
   "Are you sure you want to sign out": "Are you sure you want to sign out",
   "Cancel": "Cancel",
-  "Yes": "Yes"
+  "Yes": "Yes",
+
+  "Income": "Income",
+  "Expense": "Expense",
+  "Wallet": "Wallet"
 }
