feat: complete settings page

--- a/translations/resources/en.json
+++ b/translations/resources/en.json
@@ -37,6 +37,20 @@
   "Pound Sterling": "Pound Sterling",
   "Zloty": "Zloty",
   "Hryvnia": "Hryvnia",
+  "Yen": "Yen",
+  "Yuan Renminbi": "Yuan Renminbi",
+  "Swiss Franc": "Swiss Franc",
+  "Canadian Dollar": "Canadian Dollar",
+  "Australian Dollar": "Australian Dollar",
+  "Swedish Krona": "Swedish Krona",
+  "Won": "Won",
+  "Norwegian Krone": "Norwegian Krone",
+  "Mexican Peso": "Mexican Peso",
+  "Indian Rupee": "Indian Rupee",
+  "Brazilian Real": "Brazilian Real",
+  "Turkish Lira": "Turkish Lira",
+  "Danish Krone": "Danish Krone",
+  "Czech Koruna": "Czech Koruna",
 
   "Income": "Income",
   "Expense": "Expense",
