--- a/translations/resources/uk.json
+++ b/translations/resources/uk.json
@@ -37,6 +37,20 @@
   "Pound Sterling": "Фунт Стерлінгів",
   "Zloty": "Злотий",
   "Hryvnia": "Гривня",
+  "Yen": "Єн",
+  "Yuan Renminbi": "Юань",
+  "Swiss Franc": "Швейцарський франк",
+  "Canadian Dollar": "Канадський долар",
+  "Australian Dollar": "Австралійський долар",
+  "Swedish Krona": "Шведська крона",
+  "Won": "Вон",
+  "Norwegian Krone": "Норвежська крона",
+  "Mexican Peso": "Мексиканський песо",
+  "Indian Rupee": "Індійський рупій",
+  "Brazilian Real": "Бразильський реал",
+  "Turkish Lira": "Турецька ліра",
+  "Danish Krone": "Данська крона",
+  "Czech Koruna": "Чеська крона",
 
   "Income": "Дохід",
   "Expense": "Витрата",
