--- a/translations/resources/en.json
+++ b/translations/resources/en.json
@@ -64,5 +64,18 @@
   "Enter category name": "Enter category name",
   "Category type": "Category type",
 
+  "Add wallet": "Add wallet",
+  "wallet.name": "Name",
+  "Enter wallet name": "Enter wallet name",
+  "Initial balance": "Initial balance",
+  "Amount": "Amount",
+  "Currency": "Currency",
+  "Color": "Color",
+  "Include in total balance": "Include in total balance",
+  "This helps track your overall financial health": "This helps track your overall financial health",
+  "Choose currency": "Choose currency",
+  "Enter amount": "Enter amount",
+  "Amount must be a valid number": "Amount must be a valid number",
+
   "This field is required": "This field is required"
 }
